# skill-analyzer-api

./: .gitignore  Dockerfile  README.md  Set-AzureSkillEnv.ps1  Set-AzureSkillEnv.py  Set-AzureSkillEnv2 .ps1  autoplay.py  llm_log.jsonl  llm_open_log.jsonl  pyproject.toml  requirements.txt  startup.cmd
api/: __init__.py  app.py  storage.py
app_cli/: run_long.py  run_short.py
docs/: ROLLUP.md
skill_core/: audit_bank.py  audit_export.py  azure_cfg.py  config.py  engine - Copy.py  engine.py  heuristics.py  insights.py  llm_bridge.py  plan.py  policy.py  question_bank.py  rarity.py  rasch.py  report_html.py  reporting.py  rubrics.py  scoring.py  smoke.py  synergy.py  types.py  validators.py
skill_core/data/: bank-short.json  bank.backup.json  bank.json
tests/: conftest.py  test_audit_export.py  test_bank_audit.py  test_caps_minima.py  test_demote_guard.py  test_ladder_long.py  test_ladder_short.py  test_open_residual.py  test_plan_endpoint.py  test_rasch.py  test_sr_prior_only.py  test_variant_group.py
tools/: augment_bank.py  azure_smoke.py  calibrate_from_logs.py  manual_cli.py  open_analyze.py  reanchor_calibration.py  rt_baseline.py  validate_bank.py
